Programming Languages/Hw2/part4/t46.output
running e2c
compiling the C generated code
t46.c: In function ‘main’:
t46.c:4:2: error: expected expression before ‘=’ token
  = ;
  ^
t46.c:5:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t46.c:6:16: error: ‘bbbb’ undeclared (first use in this function)
 printf("%d\n", bbbb);
                ^
t46.c:6:16: note: each undeclared identifier is reported only once for each function it appears in
t46.c:9:2: error: expected expression before ‘=’ token
  = ;
  ^
t46.c:10:16: error: ‘k’ undeclared (first use in this function)
 printf("%d\n", k + );
                ^
t46.c:10:20: error: expected expression before ‘)’ token
 printf("%d\n", k + );
                    ^
t46.c:11:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t46.c:15:2: error: expected expression before ‘=’ token
  = ;
  ^
t46.c:16:5: error: expected expression before ‘;’ token
 2 = ;
     ^
t46.c:18:2: error: expected expression before ‘=’ token
  = ;
  ^
t46.c:19:8: error: expected expression before ‘;’ token
 0 =  + ;
        ^
t46.c:20:11: error: expected expression before ‘<=’ token
 while( -  <= 0){
           ^
t46.c:21:2: error: expected expression before ‘=’ token
  = ;
  ^
t46.c:22:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t46.c:24:2: error: expected expression before ‘=’ token
  =  + ;
  ^
t46.c:27:2: error: expected expression before ‘=’ token
  =  + ;
  ^
t46.c:28:9: error: expected expression before ‘;’ token
 2 = 2 + ;
         ^
t46.c:30:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t46.c:36:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t46.c:41:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
